# static-files

./: Cargo.toml  MIT-LICENSE  README.md  build.rs  release.sh
.github/workflows/: ci.yml  release.yml  rust.yml
examples/: ex1.rs
src/: lib.rs
src/mods/: compress.rs  generate.rs  mod.rs  npm_build.rs  resource.rs  resource_dir.rs  sets.rs  storage.rs
