[package]
name = "static-files"
version = "0.2.4"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2018"
categories = []
description = """
The library to help automate static resource collection.
"""
homepage = "https://github.com/static-files-rs/static-files"
keywords = []
license = "Unlicense OR MIT"
repository = "https://github.com/static-files-rs/static-files"

[features]
default = ["change-detection"]
sort = []

[dependencies]
change-detection = { version = "1.2", optional = true }
mime_guess = "2.0"
path-slash = "0.1"

[build-dependencies]
change-detection = { version = "1.2", optional = true }
mime_guess = "2.0"
path-slash = "0.1"
